Focus on IAnswerData.wrapData; allowing coercion to TIME or DATE from java.util.Date; tidy and streamlinging of code; added equals() to *Data classes to allow comparison. Tested multiple ways and combinations through the method, and doucmented them via tests; documenting with tests a bug in IAnswerData.wrapData interpretation of Boolean + emptyString (returns null but commentssay it should be BooleanData(false)